plugins {
    id 'java'
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.1.0'
    id 'com.gradleup.shadow' version '8.3.0'
}


group = 'ProjetAstra'


repositories {
    mavenCentral()
}


// Déterminez votre OS pour JavaFX
def os = System.getProperty("os.name").toLowerCase()
def javafxPlatform = os.contains("win") ? "win" : os.contains("mac") ? "mac" : "linux"

dependencies {
    // JUnit 4
    testImplementation 'junit:junit:4.13.2'

    // Dépendances JavaFX explicites
    implementation "org.openjfx:javafx-controls:21.0.11:${javafxPlatform}"
    implementation "org.openjfx:javafx-fxml:21.0.11:${javafxPlatform}"
    implementation "org.openjfx:javafx-graphics:21.0.11:${javafxPlatform}"
    implementation "org.openjfx:javafx-base:21.0.11:${javafxPlatform}"
}


java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}


javafx {
    version = '21.0.11'
    modules = ['javafx.controls', 'javafx.fxml']
}


application {
    mainClass = 'astra.Main'
}


startScripts {
    doLast {
        windowsScript.text = windowsScript.text.replace(
            'set DEFAULT_JVM_OPTS=',
            'set DEFAULT_JVM_OPTS="--add-modules" "javafx.controls,javafx.fxml,javafx.graphics" '
        )
        unixScript.text = unixScript.text.replace(
            'DEFAULT_JVM_OPTS=""',
            'DEFAULT_JVM_OPTS="--add-modules javafx.controls,javafx.fxml,javafx.graphics"'
        )
    }
}


// Configure gradle pour prendre system.in comme entrée
tasks.run.configure {
    standardInput = System.in
}


test {
    useJUnit()

    testLogging {
        events 'passed', 'failed', 'skipped'
    }
}


run {
    jvmArgs = [
        "-Dprism.forceGPU=true",
    ]
}


jar {
    manifest {
        attributes 'Main-Class': application.mainClass
    }
}


shadowJar {
    archiveFileName = 'Astra.jar'
    // Important : inclure aussi le fichier manifest
    manifest {
        attributes 'Main-Class': application.mainClass
    }
}
